--- a/src/index.html
+++ b/src/index.html
@@ -206,33 +206,33 @@
 			<h2>Рассчитайте стоимость и получите скидку 30%</h2>
 			<div class=row>
 				<div class="col-md-4 col-offset-1">
-					<form class=form action=# method=POST enctype=multipart/form-data>
+					<form class="form" action=# method=POST enctype=multipart/form-data id=calc>
 						<h4>Загрузите свое фото</h4>
 						<div class=file_upload>
 							<button type=button>Загрузить фотографию</button>
 							<div data-file>Файл не выбран</div>
 							<input type=file name=upload>
 						</div>
-						<select id=size>
+						<select id=size data-title="size">
 							<option >Выберите размер картины</option>
 							<option >40x50</option>
 							<option >50x70</option>
 							<option >70x70</option>
 							<option >70x100</option>
 						</select>
-						<select id=material>
+						<select id=material data-title="material">
 							<option >Выберите материал картины</option>
 							<option   title="Изящный, позволяет легко создавать текстуру, подходит для декоративных картин маслом.">Холст из волокна</option>
 							<option   title="Достаточно грубый и создает ощущение реальности, подходит для классических пейзажей, натюрмортов и портретов.">Льняной холст</option>
 							<option  title="Изящный, подходит для всех типов реалистичных портретов.">Холст из натурального хлопка</option>
 						</select>
-						<select id=options>
+						<select id=options data-title="options">
 							<option >Дополнительные услуги</option>
 							<option >Покрытие арт-гелем</option>
 							<option >Экспресс-изготовление</option>
 							<option >Доставка готовых работ</option>
 						</select>
-						<input type="text" class="promocode" placeholder="Введите ваш промокод">
+						<input type="text" class="promocode" placeholder="Введите ваш промокод" id=promocode>
 						<div class=calc-price>Для расчета нужно выбрать размер картины и материал картины</div>
 						<button class="button button-order">Быстрый заказ</button>
 					</form>
@@ -249,44 +249,44 @@
 			<div class=p-heading>Примеры работ</div>
 			<h2>Для кого делаем портрет?</h2>
 			<ul class=portfolio-menu>
-				<li class="all active">Все работы</li>
-				<li class=lovers>Для влюбленных</li>
-				<li class=chef>Для шефа</li>
-				<li class=girl>Для девушки</li>
-				<li class=guy>Для парня</li>
-				<li class=grandmother>Для бабушки</li>
-				<li class=granddad>Для дедушки</li>
+				<li class="all active" data-btn="all">Все работы</li>
+				<li class=lovers data-btn="lovers">Для влюбленных</li>
+				<li class=chef data-btn="chef">Для шефа</li>
+				<li class=girl data-btn="girl">Для девушки</li>
+				<li class=guy data-btn="guy">Для парня</li>
+				<li class=grandmother data-btn="grandmother">Для бабушки</li>
+				<li class=granddad data-btn="granddad">Для дедушки</li>
 			</ul>
 		</div>
 		<div class=portfolio-wrapper>
-			<div class="portfolio-block all girl">
+			<div class="portfolio-block all girl" data-image="girl">
 				<img src=assets/img/portfolio-1.jpg alt>
 			</div>
-			<div class="portfolio-block all girl">
+			<div class="portfolio-block all girl" data-image="girl">
 				<img src=assets/img/portfolio-2.jpg alt>
 			</div>
-			<div class="portfolio-block all lovers">
+			<div class="portfolio-block all lovers" data-image="lovers">
 				<img src=assets/img/portfolio-3.jpg alt>
 			</div>
-			<div class="portfolio-block all guy">
+			<div class="portfolio-block all guy" data-image="guy">
 				<img src=assets/img/portfolio-4.jpg alt>
 			</div>
-			<div class="portfolio-block all chef">
+			<div class="portfolio-block all chef" data-image="chef">
 				<img src=assets/img/portfolio-5.jpg alt>
 			</div>
-			<div class="portfolio-block all lovers">
+			<div class="portfolio-block all lovers" data-image="lovers">
 				<img src=assets/img/portfolio-6.jpg alt>
 			</div>
-			<div class="portfolio-block all lovers">
+			<div class="portfolio-block all lovers" data-image="lovers">
 				<img src=assets/img/portfolio-7.jpg alt>
 			</div>
-			<div class="portfolio-block all girl">
+			<div class="portfolio-block all girl" data-image="girl">
 				<img src=assets/img/portfolio-8.jpg alt>
 			</div>
-			<div class="portfolio-block all girl">
+			<div class="portfolio-block all girl" data-image="girl">
 				<img src=assets/img/portfolio-9.jpg alt>
 			</div>
-			<div class="portfolio-block all chef">
+			<div class="portfolio-block all chef" data-image="chef">
 				<img src=assets/img/portfolio-10.jpg alt>
 			</div>
 		</div>
